--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -1,3 +1,6 @@
+# 把Clash配置文件粘贴在这里点「提取模版」可以把配置文件变成模版文件
+# 后面所有的Clash配置文件可以基于当前你生成的模版来生成
+# 要使用自己的配置文件，一定要在右上角「设置」中切换成你自己的模版文件
 port: 7890
 socks-port: 7891
 allow-lan: true
