--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -38,7 +38,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港`[]🇭🇰 香港自动`[]🇸🇬 狮城`[]🇸🇬 狮城自动`[]🇺🇲 (US|CA|UK|AU)`[]🇺🇲 美国自动`[]🇨🇳 台湾自动`[]🇯🇵 日本自动`[]🇰🇷 韩国自动`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🌍 国外媒体`load-balance`[]🚀 节点选择`[] `http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌍 国外媒体`fallback`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🚀 手动切换
