--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -22,7 +22,7 @@ ruleset=Ⓜ️ 微软Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=📲 电报消息,https://raw.githubusercontent.com/arb989822/xxxxx/main/Telegram.list
+ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/xxxxx/main/Telegram.list
 ruleset=🤖 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🤖 OpenAi,https://raw.githubusercontent.com/juewuy/ShellClash/master/rules/ai.list
 ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
@@ -53,7 +53,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=💰 币交易所`fallback`[]🇬🇬 自建节点`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 电报消息`fallback`[]🇬🇬 自建节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📲 X电报DC`fallback`[]🇬🇬 自建节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📹 油管视频`load-balance`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
