--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -81,11 +81,11 @@ custom_proxy_group=🇭🇰 香港节点`url-test`(港|澳门|HK|hk|Hong Kong|Ho
 custom_proxy_group=🇬🇬 自建节点`fallback`(自建)`http://www.gstatic.com/generate_204`120,,50
 custom_proxy_group=🇨🇨 娱乐节点`load-balance`(娱乐)`http://www.gstatic.com/generate_204`120,,50
 custom_proxy_group=🇧🇷 备用节点`fallback`(备用)`http://www.gstatic.com/generate_204`120,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|Tokyo|NRT|KIX)`http://www.gstatic.com/generate_204`120,,50
+custom_proxy_group=🇯🇵 日本节点`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|Tokyo|NRT|KIX)`http://www.gstatic.com/generate_204`120,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://www.gstatic.com/generate_204`120,,150
-custom_proxy_group=🇹🇼 台湾节点`url-test`(台|新北|彰化|TW|Taiwan|TPE|KHH)`http://www.gstatic.com/generate_204`120,,50
-custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore|SIN)`http://www.gstatic.com/generate_204`120,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|Seoul|首尔|韩|韓|ICN)`http://www.gstatic.com/generate_204`120,,50
+custom_proxy_group=🇹🇼 台湾节点`load-balance`(台|新北|彰化|TW|Taiwan|TPE|KHH)`http://www.gstatic.com/generate_204`120,,50
+custom_proxy_group=🇸🇬 狮城节点`load-balance`(新加坡|坡|狮城|SG|Singapore|SIN)`http://www.gstatic.com/generate_204`120,,50
+custom_proxy_group=🇰🇷 韩国节点`load-balance`(KR|Korea|KOR|Seoul|首尔|韩|韓|ICN)`http://www.gstatic.com/generate_204`120,,50
 ;设置分组标志位
 
 enable_rule_generator=true
