--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -54,7 +54,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`120,,50
 custom_proxy_group=📲 X电报DC`fallback`[]🇬🇬 自建节点`[]🇧🇷 备用节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`http://www.gstatic.com/generate_204`120,,50
-custom_proxy_group=📹 油管视频`load-balance``consistent-hashing`[]🇨🇨 娱乐节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`120,50
+custom_proxy_group=📹 油管视频`load-balance``round-robin`[]🇨🇨 娱乐节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`120,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇧🇷 备用节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`[]🇬🇬 自建节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`120,,50
@@ -79,7 +79,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇬🇬 自建节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换
 custom_proxy_group=🇭🇰 香港节点`load-balance`(港|香港|澳门|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇬🇬 自建节点`fallback`(自建)`http://www.gstatic.com/generate_204`120,,50
-custom_proxy_group=🇨🇨 娱乐节点`load-balance``consistent-hashing`(娱乐|lookbtc)`http://www.gstatic.com/generate_204`120,,50
+custom_proxy_group=🇨🇨 娱乐节点`load-balance``round-robin`(娱乐|lookbtc)`http://www.gstatic.com/generate_204`120,,50
 custom_proxy_group=🇧🇷 备用节点`fallback`(备用)`http://www.gstatic.com/generate_204`120,,50
 custom_proxy_group=🇯🇵 日本节点`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|Tokyo|NRT|KIX)`http://www.gstatic.com/generate_204`120,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://www.gstatic.com/generate_204`120,,150
