--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -54,7 +54,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`120,,50
 custom_proxy_group=📲 X电报DC`fallback`[]🇬🇬 自建节点`[]🇧🇷 备用节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`http://www.gstatic.com/generate_204`120,,50
-custom_proxy_group=📹 油管视频`load-balance``round-robin`[]🇨🇨 娱乐节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`120,50
+custom_proxy_group=📹 油管视频`load-balance``round-robin`[]🇨🇨 娱乐节点`http://www.gstatic.com/generate_204`120,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇧🇷 备用节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`[]🇬🇬 自建节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`120,,50
