--- a/nodnsleak20240826.ini
+++ b/nodnsleak20240826.ini
@@ -56,7 +56,7 @@ custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/ge
 custom_proxy_group=📲 X电报DC`fallback`(自建)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📹 油管视频`load-balance``round-robin`(备用)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌍 国外媒体`load-balance``round-robin`(备用)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🐟 漏网之鱼`load-balance``round-robin`(自建节点)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🐟 漏网之鱼`load-balance``round-robin`(自建)`http://www.gstatic.com/generate_204`300,,50
 
 ;设置分组标志位
 
