--- a/nodnsleak2024082601.ini
+++ b/nodnsleak2024082601.ini
@@ -53,11 +53,39 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 X电报DC`fallback`(自建)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`load-balance``round-robin`(备用)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌍 国外媒体`load-balance``round-robin`(备用)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🐟 漏网之鱼`load-balance``round-robin`(自建)`http://www.gstatic.com/generate_204`300,,50
-
+custom_proxy_group=📲 X电报DC`fallback`[]🇬🇬 自建节点`[]🇧🇷 备用节点`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📹 油管视频`load-balance``round-robin`(备用)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇧🇷 备用节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=☑️ 手动切换`select`.*
+custom_proxy_group=♻️ 自动选择`url-test`[]🇬🇬 自建节点`[]🇧🇷 备用节点`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 故障转移`fallback`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇬 自建节点`[]🇧🇷 备用节点`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📶 官方优选`load-balance`(官方|防|电信|联通|移动|CT|CU|CM|CF)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🤖 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇬🇬 自建节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇬🇬 自建节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
+custom_proxy_group=🌍 国外媒体`load-balance``round-robin`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇬🇬 自建节点`[]🇧🇷 备用节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]☑️ 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🇬🇬 自建节点`[]🇧🇷 备用节点`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换
+custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]🇬🇬 自建节点`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇬 自建节点`[]📶 官方优选`[]☑️ 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇬 自建节点`[]📶 官方优选`[]☑️ 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇬 自建节点`[]📶 官方优选`[]☑️ 手动切换
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇬 自建节点`[]📶 官方优选`[]☑️ 手动切换
+custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇬🇬 自建节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|香港|澳门|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇬🇬 自建节点`url-test`(自建)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇨 娱乐节点`url-test`(娱乐|lookbtc)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇧🇷 备用节点`url-test`(备用)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|Tokyo|NRT|KIX)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾节点`url-test`(台|台湾|新北|彰化|TW|Taiwan|TPE|KHH)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore|SIN)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|Seoul|首尔|韩国|韩|韓|ICN)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
