--- a/nodnsleak20240830.ini
+++ b/nodnsleak20240830.ini
@@ -4,6 +4,8 @@ ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=💰 币交易所,https://raw.githubusercontent.com/arb989822/bnok/main/BNOK.list
+ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/xxxxx/main/Telegram.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -18,6 +20,8 @@ ruleset=🚀 节点选择,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📲 X电报DC`fallback`[]🇬🇬 自建节点`[]🇧🇷 备用节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`http://www.gstatic.com/generate_204`120,,50
+custom_proxy_group=📹 油管视频`load-balance``round-robin`[]🇨🇨 娱乐节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`120,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
