--- a/nodnsleak20240830.ini
+++ b/nodnsleak20240830.ini
@@ -22,6 +22,10 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📲 X电报DC`fallback`[]🇬🇬 自建节点`[]🇧🇷 备用节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📹 油管视频`load-balance``round-robin`[]🇨🇨 娱乐节点`[]🇭🇰 香港节点`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|香港|澳门|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇬🇬 自建节点`url-test`(自建)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇨 娱乐节点`url-test`(娱乐|lookbtc)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇧🇷 备用节点`url-test`(备用)`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
