--- a/nodnsleak20240830.ini
+++ b/nodnsleak20240830.ini
@@ -20,7 +20,7 @@ ruleset=🚀 节点选择,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 X电报DC`fallback`[]🇬🇬 自建`[]🇧🇷 备用`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📲 X电报DC`fallback`(自建)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📹 油管视频`load-balance``round-robin`(hy2)`http://www.gstatic.com/generate_204`300,50
 enable_rule_generator=true
 overwrite_original_rules=true
