--- a/nodnsleak830.ini
+++ b/nodnsleak830.ini
@@ -54,7 +54,7 @@ custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/ge
 custom_proxy_group=📲 X电报DC`fallback`(自建|备用)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📹 油管视频`load-balance``round-robin`(hy2)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test``(自建|备用)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test``(自建)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
