--- a/nodnsleak001.ini
+++ b/nodnsleak001.ini
@@ -17,7 +17,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ch
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
-custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=💰 币交易所`url-test`(交易|DG)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📲 X电报DC`fallback`(自建|备用)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📹 油管视频`load-balance``round-robin`(hy2)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
