--- a/bllwrDNS.ini
+++ b/bllwrDNS.ini
@@ -1,6 +1,8 @@
 [custom]
 ;解决DNS泄露，无分流群组
 ruleset: https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/zhuip.list
+rule_url: https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/zhuip.list
+ruleset: *rule_url
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
