--- a/bllwrDNS.ini
+++ b/bllwrDNS.ini
@@ -3,6 +3,9 @@
 ruleset: https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/zhuip.list
 rule_url: https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/zhuip.list
 ruleset: *rule_url
+ruleset:https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/zhuip.list
+rule_url:https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/zhuip.list
+ruleset:*rule_url
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
