--- a/bllwrDNS.ini
+++ b/bllwrDNS.ini
@@ -1,9 +1,9 @@
 [custom]
 ;解决DNS泄露，无分流群组
+ruleset=DIRECT,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/zhuip.list
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
-ruleset=https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/zhuip.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
