--- a/nodnsleak20241125zhu.ini
+++ b/nodnsleak20241125zhu.ini
@@ -52,7 +52,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=💰 币交易所`url-test`(zhu152-2402|zhu)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📲 X电报DC`fallback`(zhu152-2402|zhu)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`load-balance``round-robin`(DG|法国|美国)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=📹 油管视频`load-balance``round-robin`(888)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`(888)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
