--- a/nodnsleakjh91.ini
+++ b/nodnsleakjh91.ini
@@ -50,11 +50,11 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=💰 币交易所`url-test`(evo|DG)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 X电报DC`fallback`(DG|evo|法国)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`load-balance``round-robin`(DG|法国|美国)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📲 X电报DC`fallback`(日本|德国|法国)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📹 油管视频`load-balance``round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test`(DG|法国|美国)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`(德国|法国|美国|日本)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
