--- a/nodnsleakjh25718.ini
+++ b/nodnsleakjh25718.ini
@@ -55,16 +55,16 @@ custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/ge
 custom_proxy_group=📲 X电报DC`fallback`(日本|法国)`http://www.gstatic.com/generate_204`300,3,50
 custom_proxy_group=📹 油管视频`load-balance`(油管)`http://www.gstatic.com/generate_204`300,3,50
 custom_proxy_group=💸 提法币`url-test`(法国)`http://www.gstatic.com/generate_204`300,3,50
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT.*
-custom_proxy_group=♻️ 自动选择`url-test`(法国|美国|日本)`http://www.gstatic.com/generate_204`300,3,50
-custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
+custom_proxy_group=♻️ 自动选择`url-test`(法国|美国|日本)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=Ⓜ️ 微软Bing`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🎶 网易音乐`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
@@ -73,7 +73,7 @@ custom_proxy_group=📺 巴哈姆特`select`[]🚀 节点选择`[]🎯 全球直
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
