--- a/nodnsleakjh25718.ini
+++ b/nodnsleakjh25718.ini
@@ -52,7 +52,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,3,50
-custom_proxy_group=📲 X电报DC`fallback`(日本|法国)`http://www.gstatic.com/generate_204`300,3,50
+custom_proxy_group=📲 X电报DC`fallback`(日本)`http://www.gstatic.com/generate_204`300,3,50
 custom_proxy_group=📹 油管视频`load-balance`(油管)`http://www.gstatic.com/generate_204`300,3,50
 custom_proxy_group=📹 油管视频`load-balance``round-robin`(油管)`http://www.gstatic.com/generate_204`300,3,50
 custom_proxy_group=💸 提法币`url-test`(法国)`http://www.gstatic.com/generate_204`300,3,50
