--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -78,7 +78,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`load-balance``round-robin`(无限量)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=📹 油管视频`load-balance``round-robin`(交易)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=💸 提法币`url-test`(备用)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`(备用|油管|社交)`http://www.gstatic.com/generate_204`300,,50
