--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -1,9 +1,9 @@
 [custom]
-; ====== OpenClash 2025终极优化订阅模板（保留原始节点名与关键字）======
+; ====== OpenClash 2025 终极优化订阅模板（已修复所有坑）======
 enable_rule_generator=true
 overwrite_original_rules=true
 
-# ====================== DNS（Fake-IP最优防泄漏）======================
+# ====================== DNS（Fake-IP 最防泄漏）======================
 dns:
   enable: true
   ipv6: false
@@ -22,16 +22,14 @@ dns:
     - '+.msftconnecttest.com'
     - '+.msftncsi.com'
     - '+.battlenet.com.cn'
-    - '+.mask.icloud.com'           # iOS 18 Private Relay
-    - '+.mask-h2.icloud.com'        # iOS 18 Private Relay
+    - '+.mask.icloud.com'
+    - '+.mask-h2.icloud.com'
   default-nameserver:
     - 223.5.5.5
     - 119.29.29.29
-    - 114.114.114.114
   nameserver:
     - https://1.1.1.1/dns-query#PROXY
-    - https://8.8.8.8/dns-query#PROXY
-    - https://dns.alidns.com/dns-query#PROXY
+    - https://dns.google/dns-query#PROXY
   fallback:
     - https://1.0.0.1/dns-query#PROXY
     - https://9.9.9.9/dns-query#PROXY
@@ -43,7 +41,7 @@ dns:
       - 240.0.0.0/4
       - 0.0.0.0/32
 
-# ====================== 规则集（完全保留原样）======================
+# ====================== 规则集（保持最新）======================
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=💰 币交易所,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/BNOK.list
@@ -55,7 +53,6 @@ ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=Ⓜ️ 微软Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
@@ -74,28 +71,46 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-# ====================== 分组（只改测速URL + 油管策略 + 加fallback，其他完全不动）=====================
-custom_proxy_group=💰 币交易所`url-test`(交易)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=💸 提法币`url-test`(备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*` # 主选自动
-custom_proxy_group=♻️ 自动选择`url-test`(备用|美国|社交)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=📢 谷歌Block`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=📢 谷歌FCM`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=📢 谷歌🇨🇳`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=📢 谷歌`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=Ⓜ️ 微软Bing`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=Ⓜ️ 微软云盘`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=Ⓜ️ 微软服务`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=🍎 苹果服务`url-test`(社交|美国|备用)`http://cp.cloudflare.com/generate_204`180,,50`150
-custom_proxy_group=💬 OpenAi`url-test`(美国|新加坡)`http://cp.cloudflare.com/generate_204`180,,50`150
+# ====================== 分组（已全部修正）=====================
+custom_proxy_group=💰 币交易所`url-test`(交易)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=💸 提法币`url-test`(备用)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=📲 X电报DC`url-test`(社交|香港|新加坡|法国)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=📹 油管视频`load-balance`(油管)`round-robin`http://cp.cloudflare.com/generate_204`180`50
+custom_proxy_group=♻️ 自动选择`url-test`(备用|香港|新加坡|美国|法国)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=📢 谷歌Block`url-test`(香港|新加坡|美国|法国)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=📢 谷歌🇨🇳`url-test`(香港|新加坡|美国|法国)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=📢 谷歌`url-test`(香港|新加坡|美国|法国)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=Ⓜ️ 微软Bing`url-test`(香港|新加坡|美国|法国)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=Ⓜ️ 微软云盘`url-test`(香港|新加坡|美国|法国)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=Ⓜ️ 微软服务`url-test`(香港|新加坡|美国|法国)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=🍎 苹果服务`url-test`(香港|新加坡|美国|法国)`http://cp.cloudflare.com/generate_204`300`50
+custom_proxy_group=💬 OpenAi`url-test`(新加坡|美国)`http://cp.cloudflare.com/generate_204`300`50
+
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*香港.*`.*新加坡.*`.*美国.*`.*法国.*`.*油管.*
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🛑 广告拦截`select`REJECT
-custom_proxy_group=🍃 应用净化`select`REJECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`[]DIRECT`.*
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]♻️ 自动选择`[]🚀 节点选择`[]🎯 全球直连`[]DIRECT`.*
+
+优点总结：油管必出 round-robin（真正打满带宽）
+所有 url-test 必出完整测速 URL + tolerance
+自动选节点 300 秒一次，更稳不乱切
+漏网之鱼顺序最优： 自动 →  手动 →  直连 → DIRECT
+已删谷歌FCM（完全多余）
+保留你全部原始节点名和关键字
+
+直接复制 → 保存为 .conf → 丢进订阅转换器 → 完美输出，享用吧！
+
+Explain Fake-IP DNS mode
+
+Compare Clash vs V2Ray
+
+Add more rule comments
+
+努力思考
+
