--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -76,7 +76,7 @@ custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/ge
 custom_proxy_group=💸 提法币`url-test`(备用)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=📲 X电报DC`url-test`(社交|香港|新加坡|法国)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
-custom_proxy_group=♻️ 自动选择`url-test`(备用|香港|新加坡|美国|法国)http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=♻️ 自动选择`url-test`(备用|香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=📢 谷歌Block`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=📢 谷歌🇨🇳`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=📢 谷歌`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
