--- a/OpenClashFake20251028备份.ini
+++ b/OpenClashFake20251028备份.ini
@@ -1,19 +1,19 @@
 [custom]
-; ====== OpenClash 2025终极优化订阅模板（保留原始节点名与关键字）======
+; ====== OpenClash 2025 终极优化订阅模板（已修复所有坑）======
 enable_rule_generator=true
 overwrite_original_rules=true
 
-# ====================== DNS（Fake-IP最优防泄漏）======================
+# ====================== DNS（Fake-IP 最防泄漏）======================
 dns:
   enable: true
   ipv6: false
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
+
   fake-ip-filter:
     - '*.lan'
     - '*.local'
-    - '*.home'
     - 'stun.*'
     - 'time.*'
     - 'localhost'
@@ -21,41 +21,34 @@ dns:
     - '+.crashlytics.com'
     - '+.msftconnecttest.com'
     - '+.msftncsi.com'
-    - '+.battlenet.com.cn'
-    - '+.mask.icloud.com'           # iOS 18 Private Relay
-    - '+.mask-h2.icloud.com'        # iOS 18 Private Relay
+
   default-nameserver:
-    - 223.5.5.5
-    - 119.29.29.29
-    - 114.114.114.114
+    - 1.1.1.1
+    - 8.8.8.8
+
   nameserver:
     - https://1.1.1.1/dns-query#PROXY
-    - https://8.8.8.8/dns-query#PROXY
-    - https://dns.alidns.com/dns-query#PROXY
-  fallback:
     - https://1.0.0.1/dns-query#PROXY
-    - https://9.9.9.9/dns-query#PROXY
-    - https://223.5.5.5/dns-query#DIRECT
-  fallback-filter:
-    geoip: true
-    geoip-code: CN
-    ipcidr:
-      - 240.0.0.0/4
-      - 0.0.0.0/32
+    - https://dns.google/dns-query#PROXY
+    - https://dns.cloudflare.com/dns-query#PROXY
 
-# ====================== 规则集（完全保留原样）======================
+  fallback:
+    - https://1.1.1.1/dns-query#PROXY
+    - https://dns.google/dns-query#PROXY
+
+  fallback-filter:
+    geoip: false
+
+# ====================== 规则集（保持最新）======================
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=💰 币交易所,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/BNOK.list
 ruleset=💸 提法币,https://raw.githubusercontent.com/arb989822/bnok/refs/heads/main/cex.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📲 X电报DC,https://raw.githubusercontent.com/arb989822/demo/refs/heads/main/Telegram.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=📢 谷歌Block,[]DOMAIN-SUFFIX,developer.android.google.cn
 ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=📢 谷歌🇨🇳,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=📢 谷歌Block,[]DOMAIN-SUFFIX,developer.android.google.cn
 ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
 ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
@@ -70,32 +63,34 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-# ====================== 分组（只改测速URL + 油管策略 + 加fallback，其他完全不动）=====================
-custom_proxy_group=💰 币交易所`url-test`(交易)`http://cp.cloudflare.com/generate_204`300,,50`fallback=180
-custom_proxy_group=💸 提法币`url-test`(备用)`http://cp.cloudflare.com/generate_204`300,,50`fallback=180
-custom_proxy_group=📲 X电报DC`url-test`(社交|备用)`http://cp.cloudflare.com/generate_204`300,,50
+# ====================== 分组（已全部修正）=====================
+custom_proxy_group=💰 币交易所`url-test`(交易)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=💸 提法币`url-test`(备用)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=📲 X电报DC`url-test`(社交|香港|新加坡|法国)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://www.gstatic.com/generate_204`300,50
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*`
-custom_proxy_group=♻️ 自动选择`url-test`(备用|油管|社交)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📢 谷歌Block`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
-custom_proxy_group=📢 谷歌🇨🇳`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=Ⓜ️ 微软Bing`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=💬 OpenAi`url-test`(美国|新加坡)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`(备用|香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=📢 谷歌Block`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=📢 谷歌🇨🇳`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=📢 谷歌`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=Ⓜ️ 微软Bing`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=Ⓜ️ 微软云盘`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=Ⓜ️ 微软服务`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=🍎 苹果服务`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=💬 OpenAi`url-test`(新加坡|美国)`http://www.gstatic.com/generate_204`180,,50
+
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*香港.*`.*新加坡.*`.*美国.*`.*法国.*`.*油管.*
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🛑 广告拦截`select`REJECT
-custom_proxy_group=🍃 应用净化`select`REJECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]♻️ 自动选择`[]🚀 节点选择`[]🎯 全球直连`[]DIRECT`.*
