--- a/OpenClashFake20251028.ini
+++ b/OpenClashFake20251028.ini
@@ -119,9 +119,9 @@ custom_proxy_group=📲 X电报DC`url-test`(社交|香港|新加坡|法国)`http
 custom_proxy_group=📹 油管视频`load-balance`round-robin`(油管)`http://www.gstatic.com/generate_204`180,200
 custom_proxy_group=💬 OpenAi`url-test`(新加坡|美国)`https://chat.openai.com/cdn-cgi/trace`120,200,timeout=3000
 custom_proxy_group=♻️ 自动选择`url-test`(备用|香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
-custom_proxy_group=📢 谷歌Block`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
-custom_proxy_group=📢 谷歌🇨🇳`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
-custom_proxy_group=📢 谷歌`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
+custom_proxy_group=📢 谷歌Block`url-test`(新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
+custom_proxy_group=📢 谷歌🇨🇳`url-test`(新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
+custom_proxy_group=📢 谷歌`url-test`(新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
 custom_proxy_group=Ⓜ️ 微软Bing`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
 custom_proxy_group=Ⓜ️ 微软云盘`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
 custom_proxy_group=Ⓜ️ 微软服务`url-test`(香港|新加坡|美国|法国)`http://www.gstatic.com/generate_204`60,,200
